--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       FLASK_APP: app
       FLASK_ENV: development
       EUCHRE_API_URL: http://euchre-api:5000
+      AI_TRAINER_URL: http://ai-trainer:5003
       REDIS_URL: redis://redis:6379/1
       SECRET_KEY: dev-secret-key-change-in-production
     ports:
@@ -92,8 +93,8 @@ services:
       CUDA_VISIBLE_DEVICES: "0"
     volumes:
       - ai_models:/models
-    ports:
-      - "127.0.0.1:5002:5002"
+    expose:
+      - "5003"
     depends_on:
       - postgres
       - euchre-api
@@ -104,7 +105,7 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
-    command: python -m flask run --host=0.0.0.0 --port=5002
+    command: python -m flask run --host=0.0.0.0 --port=5003
 
   pgadmin:
     image: dpage/pgadmin4:latest
