--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
     ports:
       - "127.0.0.1:5001:5001"
     depends_on:
+      - ai-trainer
       - euchre-api
       - redis
     command: flask run --host=0.0.0.0 --port=5001
