going back to simpler and more successful basic nn model

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,6 +18,9 @@
   "mounts": [
     "source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,readonly,type=bind,consistency=cached"
   ],
+  "remoteEnv": {
+    "LD_LIBRARY_PATH": "${containerEnv:LD_LIBRARY_PATH}:/opt/conda/lib/python3.11/site-packages/nvidia/nvjitlink/lib"
+  },
   "runArgs": [
     "--gpus=all"
   ],
